# sysproxy-tauri-demo

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  download-mihomo.sh  package.json  pnpm-lock.yaml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_icon.rs  cert.rs  cert_installer.rs  interceptor.rs  main.rs  mihomo_config.rs  mihomo_manager.rs  privilege.rs  process_filter.rs  proxy.rs  socket_process.rs  transparent_proxy.rs
