[package]
name = "sysproxy-tauri-demo"
version = "0.1.0"
description = "Minimal Tauri app to set system proxy"
edition = "2021"

[dependencies]
sysproxy = { path = "./sysproxy" }
tauri = { version = "2.9.2", features = ["wry"] }
once_cell = "1.19.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
tokio = { version = "1.36", features = ["full", "rt-multi-thread"] }
hyper = { version = "1.1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes = "1.5"
tokio-rustls = "0.25"
rustls = { version = "0.22", features = ["ring"] }
rcgen = { version = "0.12", features = ["pem", "x509-parser"] }
webpki-roots = "0.26"
tokio-tungstenite = "0.21"
futures = "0.3"
regex = "1.10"
parking_lot = "0.12"
time = { version = "0.3", features = ["macros", "formatting"] }
base64 = "0.21"
chrono = "0.4"
ideamans-hudsucker = { version = "0.25", features = ["rcgen-ca", "rustls-client", "decoder"] }
flate2 = "1.0"
brotli = "3.3"
sysinfo = "0.31"
image = "0.25"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Registry",
] }

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.6"
core-foundation = "0.9"
libc = "0.2"
sysinfo = "0.31"
